--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,32 +1,35 @@
 specVersion: 0.0.4
 schema:
-  file: ./schema.graphql
+    file: ./schema.graphql
+features:
+    - ipfsOnEthereumContracts
 dataSources:
-  - kind: ethereum
-    name: Web3RSVP
-    network: mumbai
-    source:
-      address: "0x066116d553430FEe2c0fed10F2768961fB96f37a"
-      abi: Web3RSVP
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.6
-      language: wasm/assemblyscript
-      entities:
-        - ConfirmedAttendee
-        - DepositsPaidOut
-        - NewEventCreated
-        - NewRSVP
-      abis:
-        - name: Web3RSVP
-          file: ./abis/Web3RSVP.json
-      eventHandlers:
-        - event: ConfirmedAttendee(bytes32,address)
-          handler: handleConfirmedAttendee
-        - event: DepositsPaidOut(bytes32)
-          handler: handleDepositsPaidOut
-        - event: NewEventCreated(bytes32,address,uint256,uint256,uint256,string)
-          handler: handleNewEventCreated
-        - event: NewRSVP(bytes32,address)
-          handler: handleNewRSVP
-      file: ./src/web-3-rsvp.ts
+    - kind: ethereum
+      name: Web3RSVP
+      network: mumbai
+      source:
+          address: '0x066116d553430FEe2c0fed10F2768961fB96f37a'
+          abi: Web3RSVP
+          startBlock: 28539949
+      mapping:
+          kind: ethereum/events
+          apiVersion: 0.0.6
+          language: wasm/assemblyscript
+          entities:
+              - Event
+              - Account
+              - RSVP
+              - Confirmation
+          abis:
+              - name: Web3RSVP
+                file: ./abis/Web3RSVP.json
+          eventHandlers:
+              - event: ConfirmedAttendee(bytes32,address)
+                handler: handleConfirmedAttendee
+              - event: DepositsPaidOut(bytes32)
+                handler: handleDepositsPaidOut
+              - event: NewEventCreated(bytes32,address,uint256,uint256,uint256,string)
+                handler: handleNewEventCreated
+              - event: NewRSVP(bytes32,address)
+                handler: handleNewRSVP
+          file: ./src/web-3-rsvp.ts
